Making the Register and log in options part of a Sign up menu

--- a/DanceCalc/m4d/Views/Account/SignUp.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignUp.cshtml
@@ -1,7 +1,7 @@
 ﻿@using m4d.ViewModels
 @model RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Sign Up";
 }
 
 
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-default" value="Register" />
+                        <input type="submit" class="btn btn-default" value="Sign Up" />
                     </div>
                 </div>
             }
