--- a/DanceCalc/m4d/Views/Account/SignIn.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignIn.cshtml
@@ -1,7 +1,7 @@
 ﻿@using m4d.ViewModels
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Sign In";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -12,10 +12,10 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
+                <h4>Use a local account to sign in.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
+                <div class="form-group"> 
                     <label class="col-md-2 control-label">User Name or Email</label>
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
@@ -39,11 +39,11 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Sign In" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Sign up as a new user", "Register")
                 </p>
                 <p>
                     @Html.ActionLink("Forgot your password?", "ForgotPassword")
