--- a/DanceCalc/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/DanceCalc/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,16 +1,17 @@
 ﻿@model m4d.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>Sign in using:</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0)
     {
         <div>
-            <p>There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-            for details on setting up this ASP.NET application to support logging in via external services.</p>
-            @* ReSharper disable once RedundantAnonymousTypePropertyName *@
+            <p>Somethings went wrong! Please go back and try another way to sign in.</p>
+            @*<p>There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
+    for details on setting up this ASP.NET application to support signing in via external services.</p>*@
+     @*ReSharper disable once RedundantAnonymousTypePropertyName *@
         </div>
     }
     else
@@ -22,9 +23,9 @@
                 <ul class="list-unstyled">
                     @foreach (AuthenticationDescription p in loginProviders)
                     {
-                        //<button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        //<button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Sign in using your @p.Caption account">@p.AuthenticationType</button>
                         var type = @p.AuthenticationType.ToLower();
-                        <li style="margin:1em"><button type="submit" class="btn-auth btn-@type large" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Sign in with <b>@p.AuthenticationType</b></button></li>
+                        <li style="margin:1em"><button type="submit" class="btn-auth btn-@type large" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Sign in using your @p.Caption account">Sign in with <b>@p.AuthenticationType</b></button></li>
                     }
                 </ul>
             </div>
