--- a/DanceCalc/m4d/Views/Account/_SetPasswordPartial.cshtml
+++ b/DanceCalc/m4d/Views/Account/_SetPasswordPartial.cshtml
@@ -2,7 +2,7 @@
 
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    account so you can sign in without an external signin.
 </p>
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
