--- a/DanceCalc/m4d/Views/Manage/ManageLogins.cshtml
+++ b/DanceCalc/m4d/Views/Manage/ManageLogins.cshtml
@@ -48,7 +48,7 @@
 }
 @if (Model.OtherLogins.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>Add another service to sign in.</h4>
     <hr />
     using (Html.BeginForm("LinkLogin", "Manage"))
     {
@@ -57,7 +57,7 @@
         <p>
             @foreach (AuthenticationDescription p in Model.OtherLogins)
             {
-                <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Sign in using your @p.Caption account">@p.AuthenticationType</button>
             }
         </p>
         </div>
