--- a/DanceCalc/m4d/Views/Manage/SetPassword.cshtml
+++ b/DanceCalc/m4d/Views/Manage/SetPassword.cshtml
@@ -14,7 +14,7 @@
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
     You do not have a local password for this site. Add a local
-    password so you can log in without an external login.
+    password so you can sign in without an external signin.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
