Get some more refactoring of admin pages
Merge Tracing and Loggin into Diagnostics
Merge Cleanup and Initialization into Initialization
A bit of reformatting (including removing the redundant header)
Added in start time and up time to diagnostics page
Quick refactor to list of specific songs to be updated for purchase info (should consider doing this for all update tasks)

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -7,9 +7,6 @@
     <li class="active">Admin Index</li>
 </ol>
 
-<h2>Administrator Console</h2>
-<hr/>
-
 <div>
     <h3>@Html.ActionLink("Users", "Index", "ApplicationUsers")</h3>
 </div>
@@ -20,27 +17,17 @@
 </div>
 <hr/>
 <div>
-    <h3>@Html.ActionLink("Logging", "Logging")</h3>
+    <h3>@Html.ActionLink("Diagnostics", "Diagnostics")</h3>
 </div>
 <hr/>
 
 <div>
-    <h3>@Html.ActionLink("Cleanup Tasks", "CleanupTasks")</h3>
+    <h3>@Html.ActionLink("Initialization and Cleanup", "InitializationTasks")</h3>
 </div>
 <hr />
 
 <div>
-    <h3>@Html.ActionLink("Tracing", "Tracing")</h3>
-</div>
-<hr />
-
-<div>
-    <h3>@Html.ActionLink("Initialization Tasks", "InitializationTasks")</h3>
-</div>
-<hr />
-
-<div>
-    <h3>@Html.ActionLink("Song Scrape and Modifier", "ScrapingModifier")</h3>
+    <h3>@Html.ActionLink("Scraping", "Scraping")</h3>
 </div>
 <hr />
 
