--- a/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
@@ -7,15 +7,47 @@
     <li class="active">Initialization Tasks</li>
 </ol>
 
-<h2>Administrator Console</h2>
-<hr />
 <h3> Initializiation Tasks</h3>
 <ul>
-    <li>@Html.ActionLink("RebuildDanceInfo", "RebuildDanceInfo")</li>
+    <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache") (@SongCounts.Reloads - autoreloads)</li>
+    <li>
+        @Html.ActionLink("RebuildDanceInfo", "RebuildDanceInfo")
+        <ul>
+            <li>@Html.ActionLink("Recompute Dance Stats", "RebuildDances")</li>
+            <li>@Html.ActionLink("Rebuild Dance Tags", "RebuildDanceTags")</li>
+        </ul>
+    </li>
+</ul>
+
+<h3>Clean Up</h3>
+<ul>
     <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
     <li>@Html.ActionLink("Update Title Hashes", "UpdateTitleHash")</li>
-    <li>@Html.ActionLink("Recompute Dance Stats", "RebuildDances")</li>
-    <li>@Html.ActionLink("Rebuild Dance Tags", "RebuildDanceTags")</li>
+    <li>@Html.ActionLink("Clean up Tempi", "CleanTempi")</li>
+    <li>@Html.ActionLink("Fix up Artists", "FixArtists")</li>
+    <li>@Html.ActionLink("Update Albums", "UpdateAlbums")</li>
+    <li>@Html.ActionLink("Remove Lookup History", "CleanLookupHistory")</li>
+    <li>@Html.ActionLink("Fix up Zero Times", "FixZeroTime")</li>
+    <li>@Html.ActionLink("Times from Properties", "TimesFromProperties")</li>
+    @*<li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
+        <li>@Html.ActionLink("Clean Tags", "CleanTags")</li>*@
+    <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
+    <li>@Html.ActionLink("Update Spotify Regions", "SpotifyRegions", "Admin", new {count = 500}, null)</li>
+    <li>@Html.ActionLink("Region Stats", "RegionStats", "Admin")</li>
+    <li>@Html.ActionLink("Compress Regions", "CompressRegions", "Admin")</li>
+    <li>@Html.ActionLink("Cleanup Albums", "CleanAlbums", "Admin")</li>
+</ul>
+
+<h3>Merging</h3>
+<ul>
+    <li>@Html.ActionLink("Merge Candidates - Similar Title", "MergeCandidates", "Song", new { level = 2 }, null)</li>
+    <li>@Html.ActionLink("Merge Candidates - Similar (Title + Artist) + All else equal", "MergeCandidates", "Song", new { level = 1 }, null)</li>
+    <li>@Html.ActionLink("Merge Candidates - Similar (Title + Artist + Length) + All else equal", "MergeCandidates", "Song", new { level = 3 }, null)</li>
+    <li>@Html.ActionLink("Merge Candidates - Similar Title + All else equal", "MergeCandidates", "Song", new { level = 0 }, null)</li>
+</ul>
+
+<h3>Old Tasks</h3>
+<ul>
     @if (User.IsInRole("dbAdmin"))
     {
         <li>@Html.ActionLink("Restore the Datbase", "RestoreDatabase")</li>
