--- a/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Globalization
 @using m4d.Controllers
+@using Microsoft.ApplicationInsights.Extensibility
 @{
     ViewBag.Title = "Logging";
 }
@@ -12,13 +13,8 @@
 <p>Start Time = <b>@AdminController.StartTime.ToString(CultureInfo.CurrentCulture)</b></p>
 <p>Up Time = <b>@AdminController.UpTime.ToString()</b></p>
 
-<h3>Logging</h3>
-<ul>
-    <li>@Html.ActionLink("Log", "index", "log")</li>
-    <li>@Html.ActionLink("Restore From Log", "restoreLines", "log")</li>
-</ul>
 <hr />
-<h3>Tracing (Current Level = @ViewBag.TraceLevel)</h3>
+<h3>Tracing (Current Level = @TraceLevels.General.Level.ToString())</h3>
 <ul>
     <li>@Html.ActionLink("Turn Tracing Off", "SetTraceLevel", "Admin", new {level = 0}, null)</li>
     <li>@Html.ActionLink("Trace Error", "SetTraceLevel", "Admin", new {level = 1}, null)</li>
@@ -36,6 +32,14 @@
 <h3>Status</h3>
 <ul>
     <li>@Html.ActionLink("Show Status", "AdminStatus", "Admin")</li>
+    <li>Application Insights Telemetry Disabled = @Html.ActionLink(TelemetryConfiguration.Active.DisableTelemetry.ToString(), "DisableTelemetry", "Admin", new {disable = !TelemetryConfiguration.Active.DisableTelemetry}, null)</li>
+</ul>
+
+<hr />
+<h3>Logging</h3>
+<ul>
+    <li>@Html.ActionLink("Log", "index", "log")</li>
+    <li>@Html.ActionLink("Restore From Log", "restoreLines", "log")</li>
 </ul>
 
 <h3>Songs Modified By</h3>
