--- a/DanceCalc/m4d/Views/Home/About.cshtml
+++ b/DanceCalc/m4d/Views/Home/About.cshtml
@@ -1,51 +1,20 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Us";
     ViewBag.Canonical = "https://www.music4dance.net";
-    ViewBag.Description = "music4dance.net is an online catalog, tools and eductational resources that help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
+    ViewBag.Description = "About the creators of music4dance.net";
 }
 
 <div class="row">
-    <div class="col-md-4">
-        <h1 class="music">Music</h1>
-        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?</p>
-        <p class="neutral">Our <a href="/dances">dances page</a> is a quick reference for the styles of dance that will link you to a page for each dance including a description, a top ten list, and more.</p>
-        <p class="neutral">Or go directly to our <a href="/song">database of songs</a> where you can quickly search for a <a href="/song/search?SearchString=Aspettami">song</a> or sort a list of songs by attributes like <a href="/song/search?dances=SWG&filter=Index-.-Tempo-.-.-.-.-.-.-.">tempo</a> or <a href="/song/search?dances=ECS&filter=Index-.-Dances-.-.-.-.-.-.-.">popularity</a>.</p>
-        <p class="neutral">Most of the songs in our <a href="/song">database</a> are linked to purchase or streaming links for <a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Groove Music</a> so try clicking on the logo of your prefered music source and listen or purchase the music that you've discovered here.</p>
-        <p class="neutral">Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
-        <p class="neutral">Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
+    <div class="col-md-6">
+        <h1>David</h1>
+        <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer.  I love dancing, and I particularly love dancing when I enjoy the music that I’m dancing to. I’m hoping to build some community around this idea since music and dance are both so personal that multiple viewpoints early will be essential to any kind of success in this area.</p>
+        <p class="neutral">My dance background is primarily in Ballroom (I’ve been an amateur competitor in the American Rhythm styles), has moved more towards social partner dancing  and I have just taken an interest in tap.  So I’m going to start from what I know, but part of the point of building some community is to enlist experts in kinds of dance that I don’t know (or know as well) to help me broaden my scope.</p>
+        <p class="neutral">The core of my initial idea is that I would like to be able to generate a playlist of songs to dance a slow salsa or fast West Coast Swing or a Viennese Waltz to.  I’d like to do this against my own library or against one of a multitude of streaming and mp3 purchase services.  The first baby step for that is the songs section of this website, where I’ve pulled together a bunch of that information  from a number of different sources, merged and edited, so that I’ve got at least a start of a database of song title/artist/albums associated with various dances.  In the long run I would like this to be both crowd sourced and linked to actual music.</p>
     </div>
-    <div class="col-md-4">
-        <h1 class="tools">Tools</h1>
-        <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/home/counter">dance counter page</a> to help you answer that question.</p>
-        <p class="neutral">Are you curious about how fast quickstep is compared to jive?  Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to?  Use our <a href="/home/tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.</p>
-        <p class="neutral">We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
-        </p>
-
-        <p><a href="http://clkde.tradedoubler.com/click?p=259740&a=1992014&g=0&url=https%3a%2f%2fwww.microsoft.com%2fen-US%2fstore%2fmusic%2falbum%2fbilly-joel%2fthe-stranger-remastered%2f8D6KGX51GFJJ%3fsource%3dlinkbuilder" title="The Stranger (Remastered)"><img src="http://musicimage.xboxlive.com/content/music.album.8D6KGX51GFJJ/image?locale=en-US&w=100&h=100" /></a>
-</p>
-    </div>
-    <div class="col-md-4">
-        <h1 class="blog">Info</h1>
-        <p class="neutral">
-            Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.
-        </p>
-        <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
-        <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
-        <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
-        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="https://www.music4dance.net/blog/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
-        <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
-        <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">[Read more]</a> </p>
-        <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
-        <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
-        <h4 class="blog">The Pink Martini Solution</h4>
-        <p class="neutral">
-            Not all artists are created equal when it comes to creating dance-able music. For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a>
-            <h4 class="blog">Help: How would you group this dance style?</h4>
-        <p class="neutral">
-            One of the fun things about learning more about different dance styles is... <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">[Read more]</a>
-            <h4 class="blog">The “Dancing with the Stars” Solution</h4>
-        <p class="neutral">
-            I learned to dance in part because <a href="http://www.imdb.com/title/tt0092890/?ref_=nv_sr_1"><i>Dirty Dancing</i></a> made me want to be Johnny Castle... <a href="https://www.music4dance.net/blog/the-dancing-with-the-stars-solution/">[Read more]</a>
-        </p>
+    <div class="col-md-6">
+        <h1>Amanda</h1>
+        <p class="neutral">I joined Music4Dance soon after the site was up and about to release its beta test for its first round of registered users.</p>
+        <p class="neutral"> I studied Biology in school and started getting interested in programing post college even before I joined David on this project. David has been kind enough to let me help out with the site and the design process in creating it.</p>
+        <p class="neutral">I also have a background in dance. I danced throughout high school and college doing Jazz, Ballet, Modern, and even some Balinese dance. I have on occasion gone to Salsa and Swing nights, and have been to a Waltz or two.</p>
     </div>
 </div>
