Refecatored so we have the basic tempo tables for the competition pages on the ballroom competition page as well as putting some more text on the page.  ;

--- a/DanceCalc/m4d/App_Code/DanceHelper.cshtml
+++ b/DanceCalc/m4d/App_Code/DanceHelper.cshtml
@@ -67,3 +67,14 @@
         <p>(*) A short explanation of the NDCA (National Dance Council of America) columns: For American style dances the "A" column contains Tempi for Silver and Gold levels while the "B" column contains Tempi for Bronze level. For International style dances the "A" column contains Tempi for Professional and Amateur couples while the "B" column contains Tempi for Pro/Am couples. </p>
     }
 }
+
+@helper FullRoundName(DanceCategory category)
+{
+    @category.Name @(category.Round.Count == 4 ? " four " : " five " )
+}
+
+@helper LinkCategory(System.Web.Mvc.HtmlHelper html, string name)
+{
+    @html.ActionLink(name, DanceObject.SeoFriendly(name), "dances");
+}
+
