--- a/DanceCalc/m4d/Views/Shared/_LoginPartial.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_LoginPartial.cshtml
@@ -23,7 +23,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-         <li>@Html.ActionLink("Sign In", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+         <li>@Html.ActionLink("Sign In", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
          <li class="bg-primary">@Html.ActionLink("Sign Up", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
     </ul>
 }
