--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Dances", "index", "dances")</li>
-                            <li>@Html.ActionLink("Songs", "index", "song")</li>
+                            <li>@Html.ActionLink("Song Library", "index", "song")</li>
                             <li>@Html.ActionLink("Tags", "index", "tag")</li>
                         </ul>
                     </li>
