--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -55,10 +55,11 @@
         }
     }
     <div class="row">
-        <div class="col-xs-12">
-            <div class="input-group" style="margin-top:10px">
+        <h2 class="col-sm-4">Song Library</h2>
+        <div class="col-sm-offset-3">
+            <div class="input-group" style="margin-top:1.5em">
                 <div class="input-group-btn search-panel">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="margin-left:15px">
                         <span id="dance_selector">@danceName</span> <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
@@ -86,11 +87,11 @@
                 <input type="hidden" name ="tags" id="tags" />
                 @Html.TextBox("SearchString", filter.SearchString, new { @class = "form-control search-text", placeholder = "Artist, Title, or Album" })
                 <span class="input-group-btn">
-                    <button id="submit-search" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+                    <button id="submit-search" class="btn btn-default" type="submit" style="margin-right:15px"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
             </div>
-        </div>
-    </div>
+        </div> 
+    </div> 
     <div class="row">
         <div class="col-xs-12">
             <div id="AdvancedSearch" class="input-group">
