Improve (hopefully) the "Song Library" label next to the basic search.
After beating my head against this for way too long (including going down the table path), it looks like we can kludge the bootstrap grid semantics by adding the col-sm & sol-sm offset classes to the <H1> and the div that contains the search control, but then overriding width of the H1 to just let it autosize and the left-margin to the search div to just let is size comfortable against the previous element.

I tested in IE, Chrome, and FF as well as multiple device emulators in Chrome.  This feels a bit kludgy to me, but the other solution was buggying me enough that I'm willing to take the risk...

--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -55,9 +55,9 @@
         }
     }
     <div class="row">
-        <h2 class="col-sm-4">Song Library</h2>
-        <div class="col-sm-offset-3">
-            <div class="input-group" style="margin-top:1.5em">
+        <h1 class="col-sm-2" style="width: auto;font-size: 22px;">Song Library</h1>
+        <div class="col-sm-offset-2" style="margin-left:1px">
+            <div class="input-group" style="margin-top:1em">
                 <div class="input-group-btn search-panel">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="margin-left:15px">
                         <span id="dance_selector">@danceName</span> <span class="caret"></span>
