--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -69,19 +69,19 @@
         <a href="@blogref" class="list-group-item">Blog</a>
     }
    </div>
-    <div id="dancedescription" class="col-sm-8 big-text col-sm-pull-3">@Html.Raw(description)</div>
-    @if (@Model.Parent != null && Model.Dance.Info.Meter.Numerator != 1)
-    {
-        var info = Model.Dance.Info;
-        var tempo = info.TempoRange;
-        var oneTempo = tempo.Min == tempo.Max;
-        var bpmMin = tempo.Min * info.Meter.Numerator;
-        var bpmMax = tempo.Max * info.Meter.Numerator;
-        var rangeText = (oneTempo) ? "at" : "between";
-        var bpmText = bpmMin.ToString(CultureInfo.CurrentCulture) + (oneTempo ? string.Empty : " and " + bpmMax.ToString(CultureInfo.CurrentCulture)) + " beats per minute";
-        var mpmText = tempo.MinString + (oneTempo ? string.Empty : " and " + tempo.MaxString) + " measures per mintue";
-        <hr />
-        <div id="tempo-info" class="col-sm-8 col-sm-pull-3">
+    <div id="dancedescription" class="col-sm-8 col-sm-pull-3">
+        <div class="big-text">@Html.Raw(description)</div>
+        @if (@Model.Parent != null && Model.Dance.Info.Meter.Numerator != 1)
+        {
+            var info = Model.Dance.Info;
+            var tempo = info.TempoRange;
+            var oneTempo = tempo.Min == tempo.Max;
+            var bpmMin = tempo.Min * info.Meter.Numerator;
+            var bpmMax = tempo.Max * info.Meter.Numerator;
+            var rangeText = (oneTempo) ? "at" : "between";
+            var bpmText = bpmMin.ToString(CultureInfo.CurrentCulture) + (oneTempo ? string.Empty : " and " + bpmMax.ToString(CultureInfo.CurrentCulture)) + " beats per minute";
+            var mpmText = tempo.MinString + (oneTempo ? string.Empty : " and " + tempo.MaxString) + " measures per mintue";
+            <hr />
             <h4>Tempo Information</h4>
             <p>
                 The @Model.DanceName is generally danced to music in a @info.Meter Meter
@@ -92,9 +92,10 @@
                 <img src="~/Content/tools.png" alt="tools" width="24" height="24" />Use our tempi tool to find more infromation about tempi and to explore relationships between the meter and tempi of different dance styles.
                 @SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/")
             </p>
-        </div>
-    }
+        }
+    </div>
 </div>
+<hr />
 
 @if (Model.TopSongs.Any())
 {
