--- a/DanceCalc/m4d/App_Code/DanceHelper.cshtml
+++ b/DanceCalc/m4d/App_Code/DanceHelper.cshtml
@@ -39,10 +39,11 @@
             <th>Name</th>
             <th>Meter</th>
             <th>MPM</th>
-            <th>DanceSport</th>
-            <th>NDCA @ndcaTitleA</th>
-            <th>NDCA @ndcaTitleB</th>
-            <th>BPM</th>
+            <th>Dance&shy;Sport</th>
+            <th class="hidden-xs">NDCA @ndcaTitleA</th>
+            <th class="hidden-xs">NDCA @ndcaTitleB</th>
+            <th class="visible-xs">NDCA @ndcaTitleA<br/>NDCA @ndcaTitleB</th>
+            <th class="hidden-xs">BPM</th>
         </tr>
         @foreach (var cat in danceList)
         {
@@ -56,9 +57,10 @@
                 <td>@d.Meter</td>
                 <td>@ShowTempo(html,d.TempoRange, d.Meter, sc.DanceId)</td>
                 <td>@ShowTempo(html, d.DanceSportTempo, d.Meter, sc.DanceId)</td>
-                <td>@ShowTempo(html, d.NDCATempoA, d.Meter, sc.DanceId)</td>
-                <td>@ShowTempo(html, d.NDCATempoB, d.Meter, sc.DanceId)</td>
-                <td>@d.TempoRange.ToBpm(d.Meter)</td>
+                <td class="hidden-xs">@ShowTempo(html, d.NDCATempoA, d.Meter, sc.DanceId)</td>
+                <td class="hidden-xs">@ShowTempo(html, d.NDCATempoB, d.Meter, sc.DanceId)</td>
+                <td class="visible-xs">@ShowTempo(html, d.NDCATempoA, d.Meter, sc.DanceId)<br/>@ShowTempo(html, d.NDCATempoB, d.Meter, sc.DanceId)</td>
+                <td class="hidden-xs">@d.TempoRange.ToBpm(d.Meter)</td>
             </tr>
         }
     </table>
