--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -10,6 +10,11 @@
     padding-right: 15px;
 }
 
+section {
+    padding-top: 50px;
+    margin-top: -50px;
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
