--- a/DanceCalc/m4d/Views/Dance/BallroomCompetitionCategories.cshtml
+++ b/DanceCalc/m4d/Views/Dance/BallroomCompetitionCategories.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DanceCategory>
 @{
-     ViewBag.Title = "Ballroom competition categories";
+    ViewBag.Title = "Ballroom Competition Categories";
     ViewBag.Description = "An overview of competitive ballroom categories along with tempo ranges and song lists.";
 }
 
@@ -10,25 +10,45 @@
     <li class="active">Ballroom</li>
 </ol>
 
-<h1>Competitive Ballroom Dancing</h1>
+<h1>Competition Ballroom Dancing</h1>
 
-<div class="big-text">
-    <p>At @Html.ActionLink("music4dance","Index","Home"), we're using the definitions of competition ballroom dance established by <a href="http://www.worlddancesport.org/Rule/Athlete/Competition">World Dance Council</a> and <a href="http://ndca.org/education/dances-and-tempi/">National Dance Council of America</a>.</p>
-    <p>Click on any of the tempo in the table below (in the MPM, DanceSport, or NDCA columns) to go to a list of songs of that tempo, or the dance names to go to our description of the dance.</p>
+<div class="row">
+    <div class="col-sm-2 col-sm-offset-1 col-sm-push-8 list-group">
+        <div class="visible-xs-inline">
+            <a href="#summary" class="list-group-item">Summary</a>
+        </div>
+        @foreach (var category in Model)
+        {
+            <a href="#@category.CanonicalName" class="list-group-item">@category.Name</a>
+        }
+    </div>
+    <section id="summary">
+        <div class="col-sm-8 big-text col-sm-pull-3 big-text">
+            <p>
+                One of the <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">core ideas</a> behind @Html.ActionLink("music4dance", "Index", "Home") is to find interesting music to build playlists for competitions rounds.
+                This page is a central location to start a search for songs for your own playlists based on the tempo definitions of competition ballroom dance established by <a href="http://www.worlddancesport.org/Rule/Athlete/Competition">World Dance Council</a> and <a href="http://ndca.org/education/dances-and-tempi/">National Dance Council of America</a> and our database of songs.
+            </p>
+            <ul>
+                <li>Click on any of the tempos in the table below (in the MPM, DanceSport, or NDCA columns) to go to a list of songs of that tempo</li>
+                <li>Click on the dance names to go to our details information page for that dance style</li>
+            </ul>
+        </div>
+    </section>
 </div>
 
 @foreach (var category in Model)
 {
     var catType = category.Name.StartsWith("International") ? DanceCategoryType.International : DanceCategoryType.American;
-    <h3>@DanceHelper.LinkCategory(Html, category.Name)</h3>
-    @DanceHelper.CategoryTable(Html, category.Round, "An " + @DanceHelper.FullRoundName(category) + "dance round consist of the following:", catType)
-    <p>More about @DanceHelper.LinkCategory(Html, category.Name) dances.</p>
-    <hr/>
+    <section id="@category.CanonicalName">
+        <h3>@DanceHelper.LinkCategory(Html, category.Name)</h3>
+        @DanceHelper.CategoryTable(Html, category.Round, "An " + @DanceHelper.FullRoundName(category) + "dance round consist of the following:", catType)
+        <p>More about @DanceHelper.LinkCategory(Html, category.Name) dances.</p>
+        <hr />
+    </section>
 }
 
-<p>
-    <img src="~/Content/tools.png" alt="tools" width="24" height="24" />Explore relationships between the meter and tempi of different dance styles and find songs that match.
-    @SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/")
-</p>
+<dl class="big-text">
+    @SmartLink.TempiTool()
+</dl>
 
-<p><img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://www.music4dance.net/blog">music4dance blog</a> entries about <a href="https://www.music4dance.net/blog/tag/ballroom">Ballroom</a>.</p>
+<p class="big-text"><img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://www.music4dance.net/blog">music4dance blog</a> entries about <a href="https://www.music4dance.net/blog/tag/ballroom">Ballroom</a>.</p>
