--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -127,13 +127,12 @@
 
 <div class="row col-xs-12"><hr /></div>
 
-<div id="tools" class="row col-md-12">
+<div id="tools" class="row col-md-12 tools">
     <h2 class="tools"><img src="~/Content/tools.png" alt="music" width="48" height="48"/>Tools</h2>
     <dl class="big-text">
-        <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Use our tempo counter tool to find the tempo of a song and match it to dance styles.</dt>
+        <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24"/>Use our tempo counter tool to find the tempo of a song and match it to dance styles.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/counter") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tempo-counter/") @SmartLink.Posts("https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/")</dd>
-        <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Explore relationships between the meter and tempi of different dance styles and find songs that match.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/") @SmartLink.Posts("https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/")</dd>
+        @SmartLink.TempiTool()
     </dl>
     <p class="neutral">
         We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
