--- a/DanceCalc/m4d/Views/Home/Home.cshtml
+++ b/DanceCalc/m4d/Views/Home/Home.cshtml
@@ -121,9 +121,9 @@
 </div>
 
 <div class="row col-md-12">
-    <p>Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
+    <p>Don't see your style of dance here? <a href="mailto:info@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
-    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
+    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:info@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
 </div>
 
 <div class="row col-xs-12"><hr /></div>
@@ -134,7 +134,7 @@
     </p>
     <p class="neutral">Are you curious about how fast quickstep is compared to jive? Or are you starting practice to competition tempo music and aren't quite sure what tempo to dance Paso Doble to? Use our <a href="/home/tempi">dance tempi page</a> to explore the relationships between dance tempi as well as the tempi prescribed for partern dances by several organizations that regulate dance competitions.
     </p>
-    <p class="neutral">We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
+    <p class="neutral">We have more useful tools for dancers coming soon. <a href="mailto:info@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
     </p>
 </div>
 
