--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -120,9 +120,9 @@
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Tag songs to create your own ways of making song lists</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/register") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-editing/") @SmartLink.Posts("https://www.music4dance.net/blog/lets-tag-some-songs/")</dd>
     </dl>
-    <p>Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
+    <p>Don't see your style of dance here? <a href="mailto:info@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">leaving feedback</a> so that we can include your ideas about how to organize dance styles in the future.</p>
-    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
+    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:info@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
 </div>
 
 <div class="row col-xs-12"><hr /></div>
@@ -135,7 +135,7 @@
         @SmartLink.TempiTool()
     </dl>
     <p class="neutral">
-        We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
+        We have more useful tools for dancers coming soon. <a href="mailto:info@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
     </p>
 </div>
 
