--- a/DanceCalc/m4d/Views/Account/SignIn.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignIn.cshtml
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-offset-2 col-md-10 col-xs-offset-1">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
