--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -90,7 +90,14 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Dances", "index", "dances")</li>
+                            <li>@Html.ActionLink("Dances", "index", "dances")
+                                <ul style="list-style-type:none">
+                                    <li>@Html.ActionLink("Ballroom","ballroom-competition-categories","dances")</li>
+                                    <li>@Html.ActionLink("Latin","latin","dances")</li>
+                                    <li>@Html.ActionLink("Swing", "swing", "dances")</li>
+                                    <li>@Html.ActionLink("Tango", "tango", "dances")</li>
+                                </ul>
+                            </li>
                             <li>@Html.ActionLink("Song Library", "index", "song")</li>
                             <li>@Html.ActionLink("Tags", "index", "tag")</li>
                         </ul>
