--- a/DanceCalc/m4d/Views/Admin/Scraping.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Scraping.cshtml
@@ -27,5 +27,5 @@
     <li>@Html.ActionLink("DanceForum", "ScrapeDances", new { id = "danceforums" })</li>
     <li>@Html.ActionLink("DWTS", "ScrapeDances", new { id = "dwts" })</li>
     <li>@Html.ActionLink("WDW", "ScrapeDances", new { id = "WDW" })</li>
-    <li>@Html.ActionLink("***REMOVED***", "ScrapeDances", new { id = "***REMOVED***" })</li>
+    <li>@Html.ActionLink("***REMOVED***", "ScrapeDances", new { id = "WW", parameter="Last Dance" })</li>
 </ul>
