--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Home Page";
     ViewBag.Canonical = "https://www.music4dance.net";
-    ViewBag.Description = "music4dance.net is an online catalog, tools and eductational resources that help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
+    ViewBag.Description = "music4dance.net is an online music catalog, tools and educational resources to help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
 
     var dances = new[]
     {
