Added a wedding dance page and linked it to the top menu.  Also added it to the site map and the may dances index page.
On a slightly different vein, I cleaned up some more register/signup remapings and put a sign up call to action on both the ballroom and the wedding music pages, as I am planning on making them the landing pages for paid searches as soon as I get back.

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -54,6 +54,10 @@ table.table-songs > tbody > tr > td
     vertical-align: middle;
 }
 
+.center-cell {
+    text-align: center;
+}
+
 /* Details pages */
 
 .label {
