--- a/DanceCalc/m4d/Views/Dance/BallroomCompetitionCategories.cshtml
+++ b/DanceCalc/m4d/Views/Dance/BallroomCompetitionCategories.cshtml
@@ -31,6 +31,8 @@
             <ul>
                 <li>Click on any of the tempos in the table below (in the MPM, DanceSport, or NDCA columns) to go to a list of songs of that tempo</li>
                 <li>Click on the dance names to go to our details information page for that dance style</li>
+                <li>Read our <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">blog post</a> for step by step instructions on using our catalog to find music of specific style and tempo.</li>
+                <li>@Html.ActionLink("Sign up", "SignUp", "Account") (it's free) to start building your own music lists.</li>
             </ul>
         </div>
     </section>
