--- a/DanceCalc/m4d/Views/Home/SiteMap.cshtml
+++ b/DanceCalc/m4d/Views/Home/SiteMap.cshtml
@@ -19,6 +19,7 @@
                     <li><a href="/dances/american-rhythm" class="music">American Rhythm</a></li>
                 </ul>
             </li>
+            <li><a href="/dances/wedding-music" class="music">Wedding Music</a></li>
             @foreach (var sc in @Model)
             {
                 if (sc.DanceId == "ALL")
