--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -99,6 +99,7 @@
                                 </ul>
                             </li>
                             <li>@Html.ActionLink("Song Library", "index", "song")</li>
+                            <li>@Html.ActionLink("Wedding", "wedding-music", "dances")</li>
                             <li>@Html.ActionLink("Tags", "index", "tag")</li>
                         </ul>
                     </li>
