--- a/DanceCalc/m4d/Views/Account/SignIn.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignIn.cshtml
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Sign up as a new user", "Register")
+                    @Html.ActionLink("Sign up as a new user", "SignUp")
                 </p>
                 <p>
                     @Html.ActionLink("Forgot your password?", "ForgotPassword")
