--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -32,7 +32,8 @@
     }
 </div>
 
-<p id="competition" class="big-text">Or check out our more traditional ballroom competition categories including @Html.ActionLink("International Standard","international-standard","dances"), @Html.ActionLink("International Latin","international-latin","dances"), @Html.ActionLink("American Smooth","american-smooth","dances") and @Html.ActionLink("American Rhythm","american-rhythm","dances") by going to our @Html.ActionLink("Ballroom competition categories","ballroom-competition-categories","dances") page.</p>
+<p id="competition" class="big-text">Or check out our more traditional ballroom competition categories including @Html.ActionLink("International Standard", "international-standard", "dances"), @Html.ActionLink("International Latin", "international-latin", "dances"), @Html.ActionLink("American Smooth", "american-smooth", "dances") and @Html.ActionLink("American Rhythm", "american-rhythm", "dances") by going to our @Html.ActionLink("Ballroom competition categories", "ballroom-competition-categories", "dances") page.</p>
+<p id="competition" class="big-text">We also have songs cross-indexed by style of dance and type of wedding event on our @Html.ActionLink("Wedding Dance Music", "wedding-music", "dances") page.</p>
 <p class="big-text">Choose from the dances styles to get more information or click on the number next to the name to get a list of songs that are suitable to dance that dance to.</p>
 <p class="big-text">Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
 
