Redid how the Remeber Me checkbox first fix was just made the column offset on small screens. Now it is wrapped in a <label> tag so that it responds acordenly and how we wanted it to in the first place

--- a/DanceCalc/m4d/Views/Account/SignIn.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignIn.cshtml
@@ -30,10 +30,12 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10 col-xs-offset-1">
+                    <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                           <label>
+                               @Html.CheckBoxFor(m => m.RememberMe)
+                               @Html.LabelFor(m => m.RememberMe)
+                            </label>
                         </div>
                     </div>
                 </div>
