Added the ability to put amazon and itunes id columns in batch uploads, this will let us pull in catalogs like WeddingWire more readily.  Fixed some related bug & oddnesses in catalog matching

--- a/DanceCalc/m4d/Views/Admin/UploadCatalog.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadCatalog.cshtml
@@ -8,7 +8,7 @@
 { 
     @Html.AntiForgeryToken();
     var separator = " - ";
-    var header = "TITLE,ARTIST";
+    var header = "";
     var user = "";
     var dances = "";
     var album = "";
