--- a/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
@@ -12,7 +12,8 @@
 {
     <h2>Uploads</h2>
 
-    <li>@Html.ActionLink("Upload Catalog", "UploadCatalog")</li>
+    <li>@Html.ActionLink("Upload Catalog", "UploadCatalog", new { headers = "TITLE,ARTIST" })</li>
+    <li>@Html.ActionLink("Upload Catalog (Empty)", "UploadCatalog", new { separator = @"\t", headers = "" })</li>
     <li>@Html.ActionLink("Upload Catalog (Ithaca)", "UploadCatalog", new { separator = "ITC", headers = "TEMPO,TITLE,ARTIST", user = "ithaca" })</li>
     <li>@Html.ActionLink("Upload Catalog (DWTS)", "UploadCatalog", new { separator = @"\t", headers = "DANCERS,DANCE,TITLE+ARTIST", user = "dwts", tags = "Episode 5:Other|Season 20:Other|United States:Other|DWTS:Other" })</li>
     <li>@Html.ActionLink("Upload Catalog (Paul)", "UploadCatalog", new { separator = @"\t", headers = "Dance,Rating,Title,BPM,Length,Artist,Comment", user = "paul" })</li>
